amended style sheet

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Intro to CSS</title>
   <link href="css/main.css" rel="stylesheet">
-  <link href=
+</link>
 
 
   <body>
@@ -98,5 +98,3 @@
 
   </body>
   </html>
-
-  
