--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en -ca">
 <head>
   <meta charset="utf-8">
   <title>Intro to CSS</title>
   <link href="css/main.css" rel="stylesheet">
 </link>
-
-
-  <body>
-
-
+</head>
+<body>
     <header>
       <h1>Planets</h1>
     </header>
